<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/sc_title_text_view"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/service_center_number"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/sc_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/sc_title_text_view"/>

        <TextView
            android:id="@+id/destination_title_text_view"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_below="@id/sc_title_text_view"
            android:text="@string/destination_number"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/destination_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/destination_title_text_view"
            android:layout_below="@id/sc_number_edit_text"/>

        <TextView
            android:id="@+id/filter_title_text_view"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_below="@id/destination_title_text_view"
            android:text="@string/filter_keyword"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/filter_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/filter_title_text_view"
            android:layout_below="@id/destination_number_edit_text"/>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add"/>

            <Button
                android:id="@+id/update_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/update"
                android:visibility="gone"/>

            <Button
                android:id="@+id/delete_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete"/>

        </LinearLayout>

    </RelativeLayout>

</layout>